--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
     "express": "^4.17.2",
+    "ts-jest": "^27.1.3",
     "tsc": "^2.0.4"
   },
-  
   "scripts": {
     "test": "tsc ./test/tests.ts & node dist/test/tests.js",
     "start": "tsc index.ts & node dist/index.js",
     "dev": "start /b tsc -w & nodemon -q -w dist/index.js"
   },
-
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "typescript": "^4.5.5"
   }
 }
