--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "body-parser": "^1.19.2",
     "express": "^4.17.2",
     "ts-jest": "^27.1.3",
     "tsc": "^2.0.4"
   },
   "scripts": {
     "test": "tsc ./test/tests.ts & node dist/test/tests.js",
-    "start": "tsc index.ts & node dist/index.js",
-    "dev": "start /b tsc -w & nodemon -q -w dist/index.js"
+    "start": "tsc & node dist/index.js",
+    "dev": "nodemon dist/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
