--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@types/mysql": "^2.15.21",
     "body-parser": "^1.19.2",
     "express": "^4.17.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "ts-jest": "^27.1.3",
     "tsc": "^2.0.4"
   },
