--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/email-check": "^1.1.1",
     "@types/mysql": "^2.15.21",
     "body-parser": "^1.19.2",
     "express": "^4.17.2",
