--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/email-check": "^1.1.1",
     "@types/mysql": "^2.15.21",
     "body-parser": "^1.19.2",
+    "email-check": "^1.1.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
